--- a/npm/package.json
+++ b/npm/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "nodemon app"
   },
   "keywords": [
     "test"
   ],
   "author": "Jonghwan",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
